# internetarchive-youtube

./: .env.example  .gitignore  .travis.yml  LICENSE  README.md  archive_yt_channel.py  clean_name.py  create_collection.py  index.md  jsonbin_manager.py  pyproject.toml  requirements.txt
.github/workflows/: poetry-build.yml  sync.yml
docs/: index.md
internetarchive_youtube/: __main__.py  archive_youtube.py  cli.py  create_collection.py  handlers.py  jsonbin_manager.py
